# dislaunch

./: .valalintignore  README.md  meson.build  testb  vala-lint.conf
backend/: go.mod  go.sum
backend/cmd/dislaunchd/: main.go
backend/internal/: configuration.go  interval.go  release.go  socket.go  utilities.go
frontend/: meson.build  uncrustify.cfg
frontend/src/: Application.vala  ConfigurationPage.vala  Css.vala  Ctl.vala  FolderEntryRow.vala  Gui.vala  InstallPage.vala  InstallPageFactory.vala  Main.vala  Progress.vala  ProgressBar.vala  ProgressRow.vala  Release.vala  ReleaseChannel.vala  Socket.vala  SocketPage.vala  SuspensePageFactory.vala
