executable(
	'dislaunch',
	files(
		'src/Application.vala',
		'src/ConfigurationPage.vala',
		'src/Css.vala',
		'src/FolderEntryRow.vala',
		'src/InstallPageFactory.vala',
		'src/Main.vala',
		'src/Progress.vala',
		'src/ProgressBar.vala',
		'src/ProgressRow.vala',
		'src/Release.vala',
		'src/ReleaseChannel.vala',
		'src/Socket.vala',
		'src/SuspensePageFactory.vala',
	),
	dependencies: [
		dependency('glib-2.0'),
		dependency('gobject-2.0'),
		dependency('gee-0.8'),
		dependency('gio-2.0'),
		dependency('gio-unix-2.0'),
		dependency('json-glib-1.0'),
		dependency('libadwaita-1'),
		dependency('gtk4'),
		meson.get_compiler('vala').find_library('posix'),
	],
)
